Project

General

Profile

Actions

Bug #49169

closed

ETagVerifier_MPU compilation warning

Added by Casey Bodley over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
multisite
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

src/rgw/rgw_etag_verifier.cc: In member function 'virtual void rgw::putobj::ETagVerifier_MPU::calculate_etag()':
src/rgw/rgw_etag_verifier.cc:179:12: warning: '%lld' directive output may be truncated writing between 1 and 20 bytes into a region of size 15 [-Wformat-truncation=]
            "-%lld", (long long)(part_ofs.size()));
            ^~~~~~~
src/rgw/rgw_etag_verifier.cc:179:12: note: directive argument in the range [-1152921504606846976, 1152921504606846975]

Related issues 1 (0 open1 closed)

Copied to rgw - Backport #49251: pacific: ETagVerifier_MPU compilation warningResolvedCasey BodleyActions
Actions #1

Updated by Casey Bodley over 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 39301
Actions #2

Updated by Casey Bodley over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot over 3 years ago

  • Copied to Backport #49251: pacific: ETagVerifier_MPU compilation warning added
Actions #4

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF