rgw: fix snprintf() truncate warning in ETagVerifier

src/rgw/rgw_etag_verifier.cc: In member function 'virtual void rgw::putobj::ETagVerifier_MPU::calculate_etag()':
src/rgw/rgw_etag_verifier.cc:179:12: warning: '%lld' directive output may be truncated writing between 1 and 20 bytes into a region of size 15 [-Wformat-truncation=]
            "-%lld", (long long)(part_ofs.size()));
            ^~~~~~~
src/rgw/rgw_etag_verifier.cc:179:12: note: directive argument in the range [-1152921504606846976, 1152921504606846975]

Fixes: https://tracker.ceph.com/issues/49169

Signed-off-by: Casey Bodley <cbodley@redhat.com>